--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f51779be",
    "metadata": {},
    "outputs": [
@@ -10,23 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ai para você, meu amor!\n",
-      "Você é a razão do meu sorriso!\n",
-      "Você ilumina meus dias!\n",
-      "Você é a minha felicidade!\n",
-      "Você é a minha inspiração!\n",
-      "Você é a minha vida!\n"
+      "hola mundo\n"
      ]
     }
    ],
    "source": [
-    "print(\"Ai para você, meu amor!\")\n",
-    "# eu te amo!\n",
-    "print(\"Você é a razão do meu sorriso!\")\n",
-    "print(\"Você ilumina meus dias!\")\n",
-    "print(\"Você é a minha felicidade!\")\n",
-    "print(\"Você é a minha inspiração!\")\n",
-    "print(\"Você é a minha vida!\")"
+    "print(\"hola mundo\")"
    ]
   }
  ],
